--- a/pages/index.css
+++ b/pages/index.css
@@ -3,14 +3,17 @@
   display: flex;
   justify-content: center;
   margin-top: 30px;
+  color: #222222;
+  font-size: 17px;
 }
 
 .column {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   max-width: 440px;
-  align-items: center;
-  justify-content: flex-start;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 h1 {
@@ -20,17 +23,20 @@ h1 {
 }
 
 p {
-  font-size: 18px;
   margin-block-start: 0.5em;
   margin-block-end: 0.5em;
 }
 
 a {
-  font-size: 18px;
+  color: inherit;
 }
 
 a:visited {
   color: inherit;
+}
+
+.footer {
+  color: gray;
 }
 
 ul {
