--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
   margin-top: 30px;
   color: #222222;
   font-size: 17px;
+  font-family: system-ui;
 }
 
 .column {
@@ -16,10 +17,20 @@
   justify-content: center;
 }
 
+.title {
+  text-decoration: none;
+}
+
 h1 {
   font-weight: normal;
   margin-block-start: 0.47em;
   margin-block-end: 0.47em;
+}
+
+h2 {
+  font-weight: normal;
+  margin-block-start: -0.5em;
+  color: gray;
 }
 
 p {
