--- a/components/header/header.css
+++ b/components/header/header.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .titleLink {
@@ -12,9 +13,12 @@
 
 .title {
   font-weight: normal;
+  margin-block-start: 0.47em;
+  margin-block-end: 0.47em;
 }
 
 .subtitle {
   font-weight: normal;
+  margin-block-start: -0.5em;
   color: gray;
 }
