--- a/components/layout/layout.css
+++ b/components/layout/layout.css
@@ -1,3 +1,8 @@
+body {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 .container {
   width: 100%;
   display: flex;
@@ -30,4 +35,23 @@
   margin-top: 10px;
   width: 100%;
   text-align: right;
+}
+
+p {
+  margin-block-start: 0.3em;
+  margin-block-end: 0.5em;
+}
+
+a {
+  color: inherit;
+}
+
+a:visited {
+  color: inherit;
+}
+
+ul {
+  list-style-type: none;
+  padding-inline-start: 0px;
+  margin-block-end: 0.5em;
 }
