--- a/components/layout/layout.css
+++ b/components/layout/layout.css
@@ -1,5 +1,5 @@
 body {
-  padding: 10px 20px 0px 20px;
+  padding: 10px 20px 20px 20px;
 }
 
 .container {
@@ -30,10 +30,15 @@ body {
   width: 100%;
 }
 
-.next {
-  margin-top: 10px;
+.extra {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
-  text-align: right;
+  margin-top: 10px;
+}
+
+.extra a:only-child {
+  margin-left: auto;
 }
 
 p {
